# ByteStream

./: .clang-format  CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  bytestream.cpp  bytestream.hpp  main.cpp
